Add transition, map-pointing and prepare labels
@@ For now, it works.
@@ 2014-14-12 Kubo2

--- a/src/index.html
+++ b/src/index.html
@@ -46,8 +46,13 @@
 		window.onload = function() {
 			document.getElementById('start-survey').onclick = function() {
 				var survey = new window._Survey();
+
+				// postions = [
+				// 	[x, y],
+				// 	...
+				// ]
 				survey.start([
-					[318,259]
+					[318,259] //, coordinates of Trenčín (Trenčiansky hrad)
 				]);
 			}
 		}
