Remove extra #textNode-s from div#place-view

--- a/src/index.html
+++ b/src/index.html
@@ -36,9 +36,7 @@
 		</dl>
 	</div>
 	<div id="map" class='hidden'>
-		<div id="place-view">
-			
-		</div>
+		<div id="place-view"></div>
 	</div>
 	</body>
 	<script type='text/javascript'>
