Remove unneccessary window.s from non-debug version

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
 		// load the presentation
 		window.onload = function() {
 			document.getElementById('start-survey').onclick = function() {
-				var survey = window.s = new window._Survey();
+				var survey = new window._Survey();
 
 				// postions = [
 				// 	[x, y],
