Add label holder and #place-view top margin + center the #place-view horizontally

--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,7 @@
 	</div>
 	<div id="map" class='hidden'>
 		<div id="place-view"></div>
+		<div id="label" class='hidden'></div>
 	</div>
 	</body>
 	<script type='text/javascript'>
