And finally - added the labels and got the rest of functionality

--- a/src/index.html
+++ b/src/index.html
@@ -33,11 +33,55 @@
 					<li>architektúra pripomína "perníkové" domčeky</li>
 				</ul>
 			</dd>
+<dt class="vincov-les" data-poradie="3">Vincov les</dt><dd class='vincov-les'><ul>
+	<li>termálne kúpalisko v blízkosti Sládkovičova
+	<li>vonkajšie, vnútorné bazény
+	<li>zimná sezóna</ul>
+</dd>
+<dt class="piestany-jbmnt" data-poradie="4">Piešťany</dt><dd class='piestany-jbmnt'><ul>
+	<li>pochádza odtiaľto Patrik Vrbovský a žije tu Michal Straka
+	<li>majú tu bahenné liečebné kúpele
+	<li>je tu klub rýchlostnej kanoistiky Piešťany
+	<li>tečie tadiaľto Váh</ul>
+</dd>
+<dt class="tale-SALAMAndra" data-poradie="5">Salamandra Resort</dt><dd class='tale-SALAMAndra'><ul>
+	<li>nachádza sa blízko Banskej Štiavnice
+	<li>novoročná lyžovačka od 69 EUR
+	<li>lyžuje sa z vrchu Horná Roveň (860 m n. m.)</ul>
+</dd>
+<dt class="borova-hora" data-poradie="6">arborétum Borová Hora</dt><dd class='borova-hora'><ul>
+	<li>lokácia arboréta je v stredoslovenskom meste Zvolen
+	<li>nachádza sa tu najväčšia zbierka ruží na Slovensku &gt; 600
+	<li>buduje sa od roku 1965
+	<li>zbierka 660 kaktusov z celého sveta</ul>
+</dd>
+<dt class="mrtve-netopiere" data-poradie="7">Jaskyňa mŕtvych netopierov</dt><dd class='mrtve-netopiere'><ul>
+	<li>výnimočná početnými kostrami netopierov, no však aj iných tvorov
+	<li>jediná vysokohorská jaskyňa na Slovensku prístupná verejnosti
+	<li>nachádza sa na južnej strane masívu Ďumbiera, neďaleko od mesta Brezno</ul>
+</dd>
+<dt class="liptovska-mara" data-poradie="8">Liptovská Mara</dt><dd class='liptovska-mara'><ul>
+	<li>vodné dielo na strednom Liptove
+	<li>Vybudovaná v rokoch 1969-1975
+	<li>na výstavbu doplatilo 13 obcí, ktoré sú dnes na dne priehrady
+	<li>hlavný účel priehrady je protipovodňová ochrana</ul>
+</dd>
+<dt class="muzeum-dopravy-ba" data-poradie="9">Múzeum dopravy Bratislava</dt><dd class='muzeum-dopravy-ba'><ul>
+	<li>nachádza v priestoroch koľajiska prvej bratislavskej stanice parostrojnej železnice z 19. storočia a priľahlých skladov
+	<li>zbierka vozidiel od prvých dopravných prostriedkov s motorom i bez neho
+	<li>Na koľajisku možno vidieť výber parných, motorových a elektrických rušňov, nákladných vozňov a špeciálnych koľajových vozidiel slovenských železníc.
+	<li>v roku 1973 tu vznikol Krúžok priateľov železníc</ul>
+</dd>
+<dt class="u-s-steel" data-poradie="10">ŽELEZO - Oceliarne U. S. Steel Košice, s.r.o.</dt><dd class='u-s-steel'><ul>
+	<li>spoločnosť s ručením obmedzeným
+	<li>sídli v katastrálnom území Košíce - Šaca
+	<li>najväčší výrobca ocele na Slovensku</ul>
+</dd>
 		</dl>
 	</div>
 	<div id="map" class='hidden'>
 		<div id="place-view"></div>
-		<div id="label" class='hidden'></div>
+		<div id="label" class='hidden'><h1></h1><div></div></div>
 	</div>
 	</body>
 	<script type='text/javascript'>
