Add paragraph + arrow instruction

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 		<div id="introduction">
 			<h1>Vitajte na prechádzke Slovenskom!</h1>
 			<h2>→ prevedie vás po Slovensku <strong>Jakub Kubíček</strong></h2>
-			<button id="start-survey">Začať prechádzku &gt;</button>
+			<p><button id="start-survey">Začať prechádzku &gt;</button> (klikni a ďalej pokračuj šípkou vpravo →)
 		</div>
 	<div id="survey-labels">
 		<dl>
