Fixed word order in index.html
@@ Typo #quickfix
@@ proposed by lionel messi - djpw.cz/user26087

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<div id="introduction">
 			<h1>Vitajte na prechádzke Slovenskom!</h1>
-			<h2>→ prevedie vás po Slovensku <strong>Jakub Kubíček</strong></h2>
+			<h2>→ po Slovensku vás prevedie <strong>Jakub Kubíček</strong></h2>
 			<p><button id="start-survey">Začať prechádzku &gt;</button> (klikni a ďalej pokračuj šípkou vpravo →)
 		</div>
 	<div id="survey-labels">
