--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 			<dd class='trenciansky-hrad'>
 				<ul>
 					<li>rozsiahly zrenovovaný hrad na strmom vápencovom brale nad Trenčínom</li>
-					<li>história siaha do obdobia rimanov</li>
+					<li>história siaha do obdobia Rimanov</li>
 					<li>nápis na hradnej skale hlásajúci víťazstvo II. rímskej légie nad Germánmi</li>
 					<li>dnešný hrad vznikol na mieste hradiska</li>
 					<li>na nádvorí sa zachovala povestná studňa lásky</li>
@@ -26,8 +26,7 @@
 			<dt class="cicmany" data-poradie=2>Čičmany</dt>
 			<dd class='cicmany'>
 				<ul>
-					<li>obec v okrese Žilina</li>
-					<li>najvyššie položená obec v tomto okrese</li>
+					<li>najvyššie položená obec v okrese Žilina</li>
 					<li>prvé zmienky z roku 1272</li>
 					<li>z blízkeho vrchu Javorinka je možný paragliding</li>
 					<li>architektúra pripomína "perníkové" domčeky</li>
@@ -39,14 +38,13 @@
 	<li>zimná sezóna</ul>
 </dd>
 <dt class="piestany-jbmnt" data-poradie="4">Piešťany</dt><dd class='piestany-jbmnt'><ul>
-	<li>pochádza odtiaľto Patrik Vrbovský a žije tu Michal Straka
 	<li>majú tu bahenné liečebné kúpele
-	<li>je tu klub rýchlostnej kanoistiky Piešťany
+	<li>pochádza odtiaľto Patrik Rytmus Vrbovský a žije tu Michal Ego Straka
 	<li>tečie tadiaľto Váh</ul>
+	<li>je tu klub rýchlostnej kanoistiky Piešťany
 </dd>
 <dt class="tale-SALAMAndra" data-poradie="5">Salamandra Resort</dt><dd class='tale-SALAMAndra'><ul>
 	<li>nachádza sa blízko Banskej Štiavnice
-	<li>novoročná lyžovačka od 69 EUR
 	<li>lyžuje sa z vrchu Horná Roveň (860 m n. m.)</ul>
 </dd>
 <dt class="borova-hora" data-poradie="6">arborétum Borová Hora</dt><dd class='borova-hora'><ul>
@@ -56,9 +54,9 @@
 	<li>zbierka 660 kaktusov z celého sveta</ul>
 </dd>
 <dt class="mrtve-netopiere" data-poradie="7">Jaskyňa mŕtvych netopierov</dt><dd class='mrtve-netopiere'><ul>
-	<li>výnimočná početnými kostrami netopierov, no však aj iných tvorov
+	<li>výnimočná početnými kostrami netopierov, avšak aj iných tvorov
 	<li>jediná vysokohorská jaskyňa na Slovensku prístupná verejnosti
-	<li>nachádza sa na južnej strane masívu Ďumbiera, neďaleko od mesta Brezno</ul>
+	<li>nachádza sa na južnej strane masívu Ďumbiera, neďaleko mesta Brezno</ul>
 </dd>
 <dt class="liptovska-mara" data-poradie="8">Liptovská Mara</dt><dd class='liptovska-mara'><ul>
 	<li>vodné dielo na strednom Liptove
@@ -72,8 +70,7 @@
 	<li>Na koľajisku možno vidieť výber parných, motorových a elektrických rušňov, nákladných vozňov a špeciálnych koľajových vozidiel slovenských železníc.
 	<li>v roku 1973 tu vznikol Krúžok priateľov železníc</ul>
 </dd>
-<dt class="u-s-steel" data-poradie="10">ŽELEZO - Oceliarne U. S. Steel Košice, s.r.o.</dt><dd class='u-s-steel'><ul>
-	<li>spoločnosť s ručením obmedzeným
+<dt class="u-s-steel" data-poradie="10">Oceliarne U. S. Steel Košice, s.r.o.</dt><dd class='u-s-steel'><ul>
 	<li>sídli v katastrálnom území Košíce - Šaca
 	<li>najväčší výrobca ocele na Slovensku</ul>
 </dd>
