--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,15 @@
 <html>
 	<head>
+		<style>
+		#place-view {
+			background: url(assets/images/map.png) 0 0 no-repeat;
+			zoom: 1;
+		}
+		</style>
 		<meta charset='utf-8'>
 		<title>Cesta po Slovensku &bull; Geografia Projekt</title>
-		<link rel='stylesheet' href='s/general.css'>
-		<script type="text/javascript" src='s/map.js'></script>
+		<link rel='stylesheet' href='assets/styles/general.css'>
+		<script type="text/javascript" src='assets/javascript/map.js'></script>
 	</head>
 	<body>
 		<div id="introduction">
