--- a/src/index.html
+++ b/src/index.html
@@ -27,8 +27,8 @@
 			<dd class='cicmany'>
 				<ul>
 					<li>najvyššie položená obec v okrese Žilina</li>
-					<li>prvé zmienky z roku 1272</li>
-					<li>z blízkeho vrchu Javorinka je možný paragliding</li>
+					<li>prvé zmienky o Čičmanoch z roku 1272</li>
+					<li>z neďalekého vrchu Javorinka je možný paragliding</li>
 					<li>architektúra pripomína "perníkové" domčeky</li>
 				</ul>
 			</dd>
