Translated texts to English

--- a/src/index.html
+++ b/src/index.html
@@ -22,65 +22,85 @@
 			<dt class='trenciansky-hrad' data-poradie=1>Trenčiansky hrad</dt>
 			<dd class='trenciansky-hrad'>
 				<ul>
-					<li>rozsiahly zrenovovaný hrad na strmom vápencovom brale nad Trenčínom</li>
-					<li>história siaha do obdobia Rimanov</li>
-					<li>nápis na hradnej skale hlásajúci víťazstvo II. rímskej légie nad Germánmi</li>
-					<li>dnešný hrad vznikol na mieste hradiska</li>
-					<li>na nádvorí sa zachovala povestná studňa lásky</li>
+					<li>a vast castle built at the high steep rocky mountain, similarly as many other castles in Europe
+					<li>the first mention of the castle is dated to the times of Roman imperium
+					<li>a unique authentic proof of the presence of Roman legions in the territory of Trencin is the inscription on the steep castle rock
+					<li>there is Well of Love in the castle courtyard built by Omar according to the legend
+					<li>the legend tells us that Omar was digging this well 3 years with his 300 fellows in order to gain the freedom for the beloved beautiful Fatima
+					<li>the source of the water was never found inside the castle rock, however, it serves as a reservoir of rain water successfully until now
 				</ul>
 			</dd>
 			<dt class="cicmany" data-poradie=2>Čičmany</dt>
 			<dd class='cicmany'>
 				<ul>
-					<li>najvyššie položená obec v okrese Žilina</li>
-					<li>prvé zmienky o Čičmanoch z roku 1272</li>
-					<li>z neďalekého vrchu Javorinka je možný paragliding</li>
-					<li>architektúra pripomína "perníkové" domčeky</li>
+					<li>the typical village in the middle of the mountains famous for its original log houses with the typical white ornamentation
+					<li>the painting was intended to protect the logs against the effect of sunrays and was painted usually by women
+					<li>the first written reference on village is dated to the year 1272
+					<li>similar architecture worth of mentioning is in Vlkolínec village, where log houses are painted by various colours
+					<li>this type of architecture reminds us the pumpernickel houses from the stories of our childhood
 				</ul>
 			</dd>
-<dt class="vincov-les" data-poradie="3">Vincov les</dt><dd class='vincov-les'><ul>
-	<li>termálne kúpalisko v blízkosti Sládkovičova
-	<li>vonkajšie, vnútorné bazény
-	<li>zimná sezóna</ul>
-</dd>
-<dt class="piestany-jbmnt" data-poradie="4">Piešťany</dt><dd class='piestany-jbmnt'><ul>
-	<li>majú tu bahenné liečebné kúpele
-	<li>pochádza odtiaľto Patrik Rytmus Vrbovský a žije tu Michal Ego Straka
-	<li>tečie tadiaľto Váh
-	<li>je tu klub rýchlostnej kanoistiky Piešťany</ul>
-</dd>
-<dt class="tale-SALAMAndra" data-poradie="5">Salamandra Resort</dt><dd class='tale-SALAMAndra'><ul>
-	<li>nachádza sa blízko Banskej Štiavnice
-	<li>lyžuje sa z vrchu Horná Roveň (860 m n. m.)</ul>
-</dd>
-<dt class="borova-hora" data-poradie="6">arborétum Borová Hora</dt><dd class='borova-hora'><ul>
-	<li>lokácia arboréta je v stredoslovenskom meste Zvolen
-	<li>nachádza sa tu najväčšia zbierka ruží na Slovensku &gt; 600
-	<li>buduje sa od roku 1965
-	<li>zbierka 660 kaktusov z celého sveta</ul>
-</dd>
-<dt class="mrtve-netopiere" data-poradie="7">Jaskyňa mŕtvych netopierov</dt><dd class='mrtve-netopiere'><ul>
-	<li>výnimočná početnými kostrami netopierov, avšak aj iných tvorov
-	<li>jediná vysokohorská jaskyňa na Slovensku prístupná verejnosti
-	<li>nachádza sa na južnej strane masívu Ďumbiera, neďaleko mesta Brezno</ul>
-</dd>
-<dt class="liptovska-mara" data-poradie="8">Liptovská Mara</dt><dd class='liptovska-mara'><ul>
-	<li>vodné dielo na strednom Liptove
-	<li>Vybudovaná v rokoch 1969-1975
-	<li>na výstavbu doplatilo 13 obcí, ktoré sú dnes na dne priehrady
-	<li>hlavný účel priehrady je protipovodňová ochrana</ul>
-</dd>
-<dt class="muzeum-dopravy-ba" data-poradie="9">Múzeum dopravy Bratislava</dt><dd class='muzeum-dopravy-ba'><ul>
-	<li>nachádza v priestoroch koľajiska prvej bratislavskej stanice parostrojnej železnice z 19. storočia a priľahlých skladov
-	<li>zbierka vozidiel od prvých dopravných prostriedkov s motorom i bez neho
-	<li>Na koľajisku možno vidieť výber parných, motorových a elektrických rušňov, nákladných vozňov a špeciálnych koľajových vozidiel slovenských železníc.
-	<li>v roku 1973 tu vznikol Krúžok priateľov železníc</ul>
-</dd>
-<dt class="u-s-steel" data-poradie="10">Oceliarne U. S. Steel Košice, s.r.o.</dt><dd class='u-s-steel'><ul>
-	<li>spracúva sa tu železná ruda, z ktore sa vyrába oceľ </li>
-	<li>sídli v katastrálnom území Košíce - Šaca
-	<li>najväčší výrobca ocele na Slovensku</ul>
-</dd>
+			<dt class="vincov-les" data-poradie="3">Vincov les</dt>
+			<dd class='vincov-les'>
+				<ul>
+					<li>one of the many slovakian geothermal pools and acquaparks
+					<li>it consists of several indoor as well as outdoor pools
+					<li>thanks to that it can be open to the public even during the snowstorm in the winter time
+				</ul>
+			</dd>
+			<dt class="piestany-jbmnt" data-poradie="4">Piešťany</dt>
+			<dd class='piestany-jbmnt'>
+				<ul>
+					<li>the town is well known throughout the world for its spa (river) island, where  one can experience a bath in medicinal geothermal water and in sulfuric mud, at least
+					<li>however, there is more than 30 spas throughout Slovakia
+					<li>moreover the most famous slovakian rap stars were born in this city, one of them was canoe racer like me
+					<li>annually Slovak championships in sprint canoeing is held here in Piestany
+				</ul>
+					</dd>
+			<dt class="tale-SALAMAndra" data-poradie="5">Salamandra Ski Resort</dt>
+			<dd class='tale-SALAMAndra'>
+				<ul>
+					<li>it is the southmost ski resort in the vicinity of capital of Slovakia
+					<li>located next to the historical UNESCO town Banska Stiavnica with sound gold&amp;silver-mining history with the first Mining school in European history
+					<li>Salamander ski resort is named after the lizard which, according to one of the legends, revealed the secret of the local underground - the rich deposits of gold
+				</ul>
+			</dd>
+			<dt class="borova-hora" data-poradie="6">Borova Hora Arboretum</dt>
+			<dd class='borova-hora'>
+				<ul>
+					<li>remarkable even in the European context, as it concentrates original wood species in their generic and geographic diversity
+					<li>There is also the biggest collection of rose plants in Slovakia (more than 900 varieties).
+					<li>The collection of 660 species of cactuses and succulent plants from Mexico and Southern America, kept in greenhouses are concentrated here as well.
+					<li>it was established 50 years ago and is still being developed
+
+				</ul>
+			</dd>
+			<dt class="mrtve-netopiere" data-poradie="7">Cave of dead bats</dt>
+			<dd class='mrtve-netopiere'>
+				<ul>
+					<li>exceptional due to the number of bat bones, found in various parts of the cave, whose age is estimated to 6,000 years, anyway the bones of other animals were found here too
+					<li>one of the largest open-to-public caves in Slovakia with entrance at an respectable altitude of 1 520 m in the middle of the mountains
+					<li>basic cave tour is 1 km long, lighted and secured with steel ropes and bridges
+				</ul>
+			</dd>
+			<dt class="liptovska-mara" data-poradie="8">Liptovska Mara Dam</dt>
+			<dd class='liptovska-mara'>
+				<ul>
+					<li>the largest slovakian reservoir named after one of the inundated villages, also called Slovak Sea (as there is no real sea in Slovakia)
+					<li>it was built 40 years ago by damming the river
+					<li>totally 13 inhabited villages were inundated by water
+					<li>the main purpose of this dam is to prevent floods, although it also generates electricity, or is used for recreation
+				</ul>
+			</dd>
+			<dt class="muzeum-dopravy-ba" data-poradie="9">Museum of Transport in Bratislava</dt>
+			<dd class='muzeum-dopravy-ba'>
+				<ul>
+					<li>located in the area of the first Bratislava train station, which was served by steam trains in the 19th century, so the atmosphere is really authentic
+					<li>a collection of early vehicles of different kinds, with and without engines, including prototypes
+					<li>In addition to the steam, motor or electric trains, there are also cars, motorbikes and bicycles exhibited.
+					<li>Friends of the Railway Club was founded here 40 years ago, although I love trains I am not a member of the club
+				</ul>
+			</dd>
 		</dl>
 	</div>
 	<div id="map" class='hidden'>
@@ -176,15 +196,6 @@
 							'dmba-vozidla-s-motorom.png',
 							'dmba-i-bez-motora.jpg',
 							'dmba-sidlo.jpg'
-						]
-					},
-					{
-						coordinates: [1058,375], // U. S. Steel Košice
-						images: [
-							'US-steel-kosice-saca.jpg',
-							'US-steel-vysoke-pece.jpg',
-							'US-steel-panorama.jpg',
-							'US-steel-ustredie.png'
 						]
 					}
 				]);
